--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
   <div class="chart">
     <svg></svg>
   </div>
+
+  <div>
+    Código fonte:
+    <a href="https://github.com/vicfelipe/newton-raphson/blob/master/index.html"
+      >Victor Alencastro - Newton Raphson</a
+    >
+  </div>
   <script>
     // Configura grafico, dimensões e margem
     const margin = { top: 20, right: 20, bottom: 20, left: 20 };
